--- a/index.html
+++ b/index.html
@@ -62,6 +62,61 @@
             >
           </li>
         </ul>
+            <button
+            class="menu-button"
+            type="button"
+            aria-controls="menu-conteiner"
+            aria-expanded="false"
+            data-menu-button
+          >
+            <svg
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-cross"
+                href="./images/icons/sprite.svg#icon-close-menu"
+              ></use>
+              <use
+                class="icon-menu"
+                href="./images/icons/sprite.svg#icon-mobal-menu"
+              ></use>
+            </svg>
+          </button>
+
+          <div class="menu-container" id="menu-conteiner" data-menu>
+            <ul class="site-nav-list menu-nav">
+              <li class="item mob-item">
+                <a href="" class="nav-link">Студия</a>
+              </li>
+              <li class="item mob-item">
+                <a href="./portfolio.html" class="nav-link">Портфолио</a>
+              </li>
+              <li class="item mob-item">
+                <a href="" class="nav-link">Контакты</a>
+              </li>
+            </ul>
+
+            <ul class="list menu-contacts">
+              <li class="item item-mail">
+                <a href="" class="mail">
+                  <svg class="icon-contacts" width="16" height="11">
+                    <use href="./images/icons/sprite.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="tel">
+                  <svg class="icon-contacts" width="10" height="15">
+                    <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+          </div>
       </div>
     </header>
 
@@ -77,7 +132,6 @@
       </section>
       <!--  Наші переваги  -->
       <section class="main-content-section">
-        <!--  h2 скрыт в css -->
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
 
